[tool.poetry]
name = "opac"
version = "0.0.1"
description = "opac app"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
tornado = "^6.3"
jsonschema = "^4.17"
requests = "^2.31"
redis = "^4.6"
rq = "^1.15"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.41"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
flake8 = "*"
flake8-pyproject = "*"
isort = "*"
pytest = "*"
types-requests = "*"
types-redis = "*"
types-sqlalchemy-utils = "*"
types-beautifulsoup4 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100

[tool.autoflake]
remove-unused-variables = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tornado.*", "jsonschema.*"]
ignore_missing_imports = true
