[metadata]
name = opac
version = 0.0.1
description = opac app

[options]
python_requires = >=3.7
install_requires =
    aiohttp==3.7.4
    beautifulsoup4==4.9.3
    lxml==4.6.3
    tornado==6.1
    jsonschema==3.2.0
    requests==2.25.1
    redis==3.5.3
    rq==1.10.0
    sqlalchemy==1.4.22
    sqlalchemy-utils==0.37.8
    supervisor==4.2.2

[options.extras_require]
test =
    mypy
    types-requests
    types-redis
    pytest-flake8
    pytest-mypy

[options.entry_points]
console_scripts =
    run_app = src.entrypoints.web.app:run
    run_worker = src.entrypoints.tasks.worker:run
    run_scheduler = src.entrypoints.tasks.scheduler:run
    create_schema = src.entrypoints.scripts.schema:run

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
strict_optional = True
warn_return_any = True

[isort]
line_length = 120

[flake8]
max_line_length = 120
ignore =
    # W503: line break before binary operator (flake8 is not PEP8 compliant)
    W503
    # W504: line break after binary operator (flake8 is not PEP8 compliant)
    W504
